template/ingress/multi-host/ingress-multi-host.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: red-deployment
  labels:
    app: red
spec:
  replicas: 1
  selector:
    matchLabels:
      app: red
  template:
    metadata:
      labels:
        app: red
    spec:
      containers:
      - name: red
        image: thenaim/red:latest
        ports:
        - containerPort: 8888

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blue-deployment
  labels:
    app: blue
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blue
  template:
    metadata:
      labels:
        app: blue
    spec:
      containers:
      - name: blue
        image: thenaim/blue:latest
        ports:
        - containerPort: 8888

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: green-deployment
  labels:
    app: green
spec:
  replicas: 1
  selector:
    matchLabels:
      app: green
  template:
    metadata:
      labels:
        app: green
    spec:
      containers:
      - name: green
        image: thenaim/green:latest
        ports:
        - containerPort: 8888

---
apiVersion: v1
kind: Service
metadata:
  name: red-service
spec:
  selector:
    app: red
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8888

---
apiVersion: v1
kind: Service
metadata:
  name: blue-service
spec:
  selector:
    app: blue
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8888

---
apiVersion: v1
kind: Service
metadata:
  name: green-service
spec:
  selector:
    app: green
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8888

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: red-ingress
spec:
  rules:
  - host: "ingress.lan"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: red-service
            port:
              number: 80
  - host: "blue.ingress.lan"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: blue-service
            port:
              number: 80
  - host: "green.ingress.lan"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: green-service
            port:
              number: 80
